--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 .tftable tr:hover {background-color:#ffffff;}
 </style>
 
+<style>
+/*
+	Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
+	*/
+	@media
+	  only screen  and (max-width: 760px) {
+
+		/* Force table to not be like tables anymore */
+		table, thead, tbody, th, td, tr {
+			display: block;
+		}
+
+		/* Hide table headers (but not display: none;, for accessibility) */
+		thead tr {
+			position: absolute;
+			top: -9999px;
+			left: -9999px;
+		}
+		}
+</style>
 
 		
 <style>
