--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ document.querySelector('meta[name="viewport"]').setAttribute('content', 'width='
 </script>
 
 
+<script src=''>//code.jquery.com/jquery-1.7.1.min.js</script>
 <script>
 var $rows = $('#myTable tr');
 $('#myInput').keyup(function() {
